--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1013,7 +1013,7 @@ $accent-color: #355cc9;
   top: 0;
   left: 0;
   width: 100%;
- 
+  padding-bottom: 5px;
   backface-visibility: hidden;
   transform-style: preserve-3d;
   border-radius: 6px;
@@ -1070,12 +1070,10 @@ $accent-color: #355cc9;
 .back {
   transform: rotateY(180deg);
   background-color: #fff;
- 
+
   border: 2px solid rgb(240, 240, 240);
   .inner {
-    grid-template-rows: 1fr 2fr 1fr 2fr 14fr 1fr 1fr;
-    grid-template-columns: repeat(4, auto);
-    grid-column-gap: 0.8em;
+    padding-bottom: 20px;
     justify-items: center;
   }
 
@@ -1243,7 +1241,7 @@ $color-tertiary-dark: #5643fa;
 
     &--back {
       color: black;
-      height: 100%;
+      padding-bottom: 20px;
 
       transform: rotateY(180deg);
 
@@ -1395,6 +1393,7 @@ $color-tertiary-dark: #5643fa;
 }
 .profile-card-3 .background-block .background {
   width: 100%;
+  height: 100%;
   vertical-align: top;
   opacity: 0.3;
   -webkit-filter: blur(0.5px);
@@ -1406,7 +1405,7 @@ $color-tertiary-dark: #5643fa;
   padding: 15px 25px;
   color: #232323;
   float: left;
-  background: #efefef;
+  background: #ffffff;
   height: 50%;
   border-radius: 0 0 5px 5px;
   position: relative;
@@ -1414,11 +1413,11 @@ $color-tertiary-dark: #5643fa;
 }
 .profile-card-3 .card-content::after {
   content: "";
-  background: #efefef;
-  width: 120%;
+  background: #ffffff;
+  width: 140%;
   height: 100%;
-  left: 8px;
-  bottom: 51px;
+  left: 0px;
+  bottom: 65px;
   position: absolute;
   z-index: -1;
   transform: rotate(-8deg);
@@ -1602,11 +1601,6 @@ h3,
 h5 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
 }
 
 dfn {
@@ -2329,6 +2323,7 @@ label {
   height: 100%;
   width: 100%;
   padding: 20px;
+
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-transition: all 600ms;
@@ -2340,6 +2335,7 @@ label {
 
 .box .back {
   background: rgb(255, 255, 255);
+  height: 100%;
   color: black;
   -webkit-transform: rotateX(180deg);
   transform: rotateX(180deg);
@@ -2483,4 +2479,8 @@ input {
     margin: 10px;
     z-index: 9999;
   }
+}
+
+.back-text {
+  margin-bottom: 10px;
 }
