--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -188,7 +188,7 @@
 
         &.active {
           .nav-link {
-            color: $primary !important;
+            color: rgba(255, 255, 255, 0.637) !important;
           }
         }
 
