--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -188,12 +188,12 @@
 
         &.active {
           .nav-link {
-            color: rgba(255, 255, 255, 0.637) !important;
+            color: rgb(255, 255, 255) !important;
           }
         }
 
         .nav-link {
-          color: white;
+          color: rgba(255, 255, 255, 0.514);
           font-family: $font-family-sans-serif;
           font-weight: $font-weight-bold;
           font-size: 1.5rem;
