--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -769,7 +769,7 @@ h2 {
     font-family: verdana;
     font-weight: 700;
     color: #000000;
-    font-size: 1.2em;
+    font-size: 2.0em;
     display: none;
     color: transparent;
     display: flex;
@@ -779,7 +779,7 @@ h2 {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     border-radius: 80px;
     top: 30%;
     left: 50%;
@@ -790,7 +790,7 @@ h2 {
   .pg-text {
     position: absolute;
 
-    font-size: 0.9em;
+    font-size:1em;
     display: none;
     color: transparent;
     display: flex;
@@ -864,6 +864,56 @@ h2 {
 
       display: none;
     }
+    .pg-title {
+      position: absolute;
+      text-transform: uppercase;
+      font-family: verdana;
+      font-weight: 700;
+      color: #000000;
+      font-size: 1.3em;
+      display: none;
+      color: transparent;
+      display: flex;
+      text-align: center;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      width: 100%;
+      border-radius: 80px;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-transition: all 0.2s ease;
+      transition: all 0.2s ease;
+    }
+
+
+    .pg-text {
+      position: absolute;
+  
+      font-size: 0.8em;
+      display: none;
+      color: transparent;
+      display: flex;
+      text-align: center;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+  
+      width: 80%;
+      border-radius: 80px;
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-transition: all 0.2s ease;
+      transition: all 0.2s ease;
+    }
+
+
+
   }
 
   .social i {
@@ -1913,6 +1963,9 @@ hr {
 
 .about-text p {
   font-size: 1.2em;
+padding: 20px;
+
+  text-align: center;
 }
 
 .skills-card {
