--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -64,8 +64,22 @@ $secondary: navy !default;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    list-style: none;
+    font-size: 0.7rem
 }
 
+.play-button {
+
+  font-size: 0.8rem;
+  border: 1px solid white;
+  padding: 10px;
+  letter-spacing: 1px;
+  border-radius: 50px;
+  text-transform: uppercase;
+
+
+
+}
 // Font overrides
 $font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont,
   "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -624,16 +638,26 @@ $bg-height: 800px;
   padding-bottom: 83.15%;
   margin-top: 20px;
   left: 21.29885%;
-  background-image: url("../images/portrait_black.png");
+  background-image: url("../images/nyx-screen-phone.png");
   background-size: 100%;
   background-repeat: no-repeat;
 }
+.device[data-device="iPhone7-3"][data-orientation="portrait"][data-color="black"] {
+  padding-right: 83.15%;
 
+  padding-top: 83.15%;
+  padding-bottom: 83.15%;
+  margin-top: 20px;
+  left: 21.29885%;
+  background-image: url("../images/jobs-screen-phone.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 .device[data-device="iPhone7-2"][data-orientation="portrait"][data-color="black"]
   .screen {
-  top: 4.39774%;
+  top: 8.39774%;
   left: 4.4069%;
-  width: 91.35632%;
+  width: 591.35632%;
   height: 79.06112%;
 }
 .device[data-device="iPhone7-2"][data-orientation="portrait"][data-color="black"]
@@ -756,7 +780,7 @@ h2 {
     position: absolute;
     right: 15px;
     bottom: 20px;
-    border: 1px solid white;
+   
     font-size: 0.5rem;
     border-radius: 20px;
     padding: 10px;
@@ -858,7 +882,7 @@ h2 {
     height: 34px;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 931px) {
     .social {
       position: absolute;
 
@@ -2537,4 +2561,148 @@ input {
 
 .back-text {
   margin-bottom: 10px;
+}
+///////////video info modal ///////////@at-root
+
+@media ( min-width: 768px ) {
+  .grid-divider {
+      position: relative;
+      padding: 0;
+  }
+  .grid-divider>[class*='col-'] {
+      position: static;
+  }
+  .grid-divider>[class*='col-']:nth-child(n+2):before {
+      content: "";
+      border-left: 1px solid #DDD;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+  }
+  .col-padding {
+      padding: 0 15px;
+  }
+}
+
+
+/////////////////////projects info ///////////////////
+
+
+
+.section-title {
+	position: relative
+}
+.section-title p {
+	font-size: 16px;
+	margin-bottom: 5px;
+	font-weight: 400;
+}
+.section-title h4 {
+	font-size: 40px;
+	font-weight: 600;
+	text-transform: capitalize;
+	position: relative;
+	padding-bottom: 20px;
+	display: inline-block
+}
+.section-title h4:before {
+	position: absolute;
+	content: "";
+	width: 80px;
+	height: 2px;
+	background-color: #d8d8d8;
+	bottom: 0;
+	left: 50%;
+	margin-left: -40px;
+}
+.section-title h4:after {
+	position: absolute;
+	content: "";
+	width: 50px;
+	height: 2px;
+	background-color: #FF7200;
+	left: 0;
+	bottom: 0;
+	left: 50%;
+	margin-left: -25px;
+}
+.pt-100 {
+	padding-top: 100px;
+}
+.pb-100 {
+	padding-bottom: 100px;
+}
+.mb-100{
+    margin-bottom:100px;
+}
+.services {
+	background-color: #FBFBFB;
+}
+.single-service {
+	position: relative;
+	text-align: center;
+	margin-bottom: 50px;
+	-webkit-transition: .3s;
+	transition: .3s;
+	padding: 30px 20px;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16)
+}
+.single-service:before {
+	position: absolute;
+	width: 0;
+	height: 0;
+	background-color: rgb(0, 8, 255);
+	left: 0;
+	top: 0;
+	content: "";
+	-webkit-transition: .3s;
+	transition: .3s
+}
+.single-service:after {
+	position: absolute;
+	width: 0;
+	height: 0;
+	background-color: rgb(0, 8, 255);
+	right: 0;
+	bottom: 0;
+	content: "";
+	-webkit-transition: .3s;
+	transition: .3s
+}
+.single-service:hover:after,
+.single-service:hover:before {
+	width: 50%;
+	height: 2px;
+	-webkit-transition: .3s;
+	transition: .3s
+}
+.single-service:hover {
+	box-shadow: 1px 3px 10px 0 rgba(0, 0, 0, 0.10)
+}
+.single-service i.fa {
+	font-size: 20px;
+	width: 60px;
+	height: 60px;
+	border: 1px solid #ddd;
+	line-height: 60px;
+	margin-bottom: 30px;
+	border-radius: 50%;
+	-webkit-transition: .3s;
+	transition: .3s
+}
+.single-service:hover i.fa {
+	background-color: rgb(255, 255, 255);
+	color: #fff;
+	border-color: rgb(255, 255, 255);
+	border-radius: 0;
+}
+.single-service h4 {
+	font-size: 20px;
+	font-weight: 400;
+	margin-bottom: 15px;
+	text-transform: capitalize;
+}
+.single-service p {
+	font-size: 15px;
+	line-height: 1.8;
 }
